Fixed "i" box being too short. Removed max-height

--- a/src/client/styles/charts.less
+++ b/src/client/styles/charts.less
@@ -22,7 +22,6 @@
   width: 80%;
   height: auto;
   max-width: 300px;
-  max-height: 175px;
   background-color: rgba(255, 255, 255, 0.95);
   z-index: 1;
   padding: 15px;
